fixed references image size on mobile

--- a/src/sections/References/References.module.css
+++ b/src/sections/References/References.module.css
@@ -49,6 +49,8 @@
   height: 20vw;
   max-width: 300px;
   max-height: 300px;
+  min-width: 200px;
+  min-height: 200px;
   background-color: lightblue;
   border-radius: 100%;
   background-position: center;
